GPencil: Normalize command crashes blender In weight paint mode #72430

Closed
opened 2019-12-13 20:18:35 +01:00 by Baran Yagcioglu · 5 comments

System Information
Operating system: Windows 10 Home 1909
Graphics card: Intel UHD 630

Blender Version
Broken version: 2.81 (sub 16), branch: master, commit date: 2019-12-04 11:32, hash: f1aa4d18d4, type: Release
build date: 2019-12-04, 14:30:40
platform: Windows

Short description of error
normalize command in weight paint mode crashes blender

Exact steps for others to reproduce the error

  1. Open Blender 2.81a with 2DAnimation mode
  2. Draw a rectangle (large enough to cover a single bone)
  3. Switch to object mode and add an armatüre->single bone
  4. place the bone inside the rectangle
  5. select rectangle, shift select armatüre object, ctrl+P, select with automatic weights
  6. select only rectangle and switch to draw mode
  7. draw a circle outside of the rectangle
  8. switch to weight paint mode
  9. apply "normalize" command and blender crashes

watch the video: click me

Based on the default startup or an attached .blend file (as simple as possible).
click to download blend file

System Information Operating system: Windows 10 Home 1909 Graphics card: Intel UHD 630 Blender Version Broken version: 2.81 (sub 16), branch: master, commit date: 2019-12-04 11:32, hash: f1aa4d18d49d, type: Release build date: 2019-12-04, 14:30:40 platform: Windows **Short description of error** normalize command in weight paint mode crashes blender **Exact steps for others to reproduce the error** 1) Open Blender 2.81a with 2DAnimation mode 2) Draw a rectangle (large enough to cover a single bone) 3) Switch to object mode and add an armatüre->single bone 4) place the bone inside the rectangle 5) select rectangle, shift select armatüre object, ctrl+P, select with automatic weights 6) select only rectangle and switch to draw mode 7) draw a circle outside of the rectangle 8) switch to weight paint mode 9) apply "normalize" command and blender crashes watch the video: [click me ](https://www.dropbox.com/s/vps4it4j8py4z17/normalize_command_crashes_blender.mp4?dl=0) Based on the default startup or an attached .blend file (as simple as possible). [click to download blend file ](https://www.dropbox.com/s/u6zikarinu9vgwl/normalize_crashes_blender.blend?dl=0)

Added subscriber: @BaranYagcioglu

Added subscriber: @BaranYagcioglu

Added subscriber: @mano-wii

Added subscriber: @mano-wii

I can confirm:
gps->dvert is NULL

Backtrace:

 >	blender.exe!defvert_find_index(const MDeformVert * dvert, const int defgroup) Line 680	C
 	blender.exe!gpencil_vertex_group_normalize_exec(bContext * C, wmOperator * op) Line 1966	C
 	blender.exe!wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Line 1453	C
 	blender.exe!wm_operator_call_internal(bContext * C, wmOperatorType * ot, PointerRNA * properties, ReportList * reports, const short context, const bool poll_only, wmEvent * event) Line 1688	C
 	blender.exe!WM_operator_name_call_ptr(bContext * C, wmOperatorType * ot, short context, PointerRNA * properties) Line 1703	C
 	blender.exe!operator_call_cb(bContext * C, void * UNUSED_arg1, void * arg2) Line 6511	C
 	blender.exe!ui_apply_but_funcs_after(bContext * C) Line 896	C
 	blender.exe!ui_popup_handler(bContext * C, const wmEvent * event, void * userdata) Line 10747	C
 	blender.exe!wm_handler_ui_call(bContext * C, wmEventHandler_UI * handler, const wmEvent * event, int always_pass) Line 624	C
 	blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2756	C
 	blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 3002	C
 	blender.exe!wm_event_do_handlers(bContext * C) Line 3381	C
 	blender.exe!WM_main(bContext * C) Line 420	C
 	blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 520	C

I can confirm: `gps->dvert` is `NULL` Backtrace: ``` > blender.exe!defvert_find_index(const MDeformVert * dvert, const int defgroup) Line 680 C blender.exe!gpencil_vertex_group_normalize_exec(bContext * C, wmOperator * op) Line 1966 C blender.exe!wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Line 1453 C blender.exe!wm_operator_call_internal(bContext * C, wmOperatorType * ot, PointerRNA * properties, ReportList * reports, const short context, const bool poll_only, wmEvent * event) Line 1688 C blender.exe!WM_operator_name_call_ptr(bContext * C, wmOperatorType * ot, short context, PointerRNA * properties) Line 1703 C blender.exe!operator_call_cb(bContext * C, void * UNUSED_arg1, void * arg2) Line 6511 C blender.exe!ui_apply_but_funcs_after(bContext * C) Line 896 C blender.exe!ui_popup_handler(bContext * C, const wmEvent * event, void * userdata) Line 10747 C blender.exe!wm_handler_ui_call(bContext * C, wmEventHandler_UI * handler, const wmEvent * event, int always_pass) Line 624 C blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2756 C blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 3002 C blender.exe!wm_event_do_handlers(bContext * C) Line 3381 C blender.exe!WM_main(bContext * C) Line 420 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 520 C ```
Antonio Vazquez self-assigned this 2019-12-17 19:45:18 +01:00

This issue was referenced by 5ad465c87f

This issue was referenced by 5ad465c87f43f96e5c9a73c7cf1d52e13b47a5ed
Antonio Vazquez changed title from In weight paint mode(Grease pencil object), normalize command crashes blender to GPencil: Normalize command crashes blender In weight paint mode 2019-12-17 19:54:59 +01:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72430
No description provided.