Fix T72430: GPencil normalize command crashes blender

When the stroke weights array was NULL, the function crash. Just check NULL value.